[package]
name = "terminal-audio-player"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
ratatui = "0.30.0"
rodio = { version = "0.22.2", features = ["playback", "symphonia-all"] }
thiserror = "2.0.18"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.23.0"
